--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Sulphuric Quiz</title>
+        <base href="/quiz/">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
