--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <h1>Welcome to Sulphuric Quiz</h1>
+    <div class="wc">
+        <h1 class=>Welcome to Sulphuric Quiz</h1>
         <!-- <p class="month"> Month : August</h2>-->
     </div>
     <div class="quiz-form">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1mT5PhsLBi7cjtlafr45CL3z1fR9jl63TIrf7MM4DsWf4KQ/viewform?embedded=true" width="100%"  frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1mT5PhsLBi7cjtlafr45CL3z1fR9jl63TIrf7MM4DsWf4KQ/viewform?embedded=true" width="100%" height="2000"  frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 </body>
 </html>
-<!--height="1196"-->
+<!--"-->
