--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <h1 class=>Welcome to Sulphuric Quiz</h1>
         <!-- <p class="month"> Month : August</h2>-->
     </div>
+    <div>
+        <h2 class="month">Month:July</h2>
+    </div>
     <div class="quiz-form">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdT5KX8B0B2Oba4WC_jZZ9uoyVWCgGYY4woLPx7eCpFjfze6Q/viewform?embedded=true" width="100%" height="2000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
