--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 class="month">Month:July</h2>
     </div>
     <div class="quiz-form">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdT5KX8B0B2Oba4WC_jZZ9uoyVWCgGYY4woLPx7eCpFjfze6Q/viewform?embedded=true" width="100%" min-height: 100% frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdT5KX8B0B2Oba4WC_jZZ9uoyVWCgGYY4woLPx7eCpFjfze6Q/viewform?embedded=true" width="100%" height="1400px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 </body>
 </html>
